Create simple UI and simple classifier
The classifier needs to be worked on
because currently it detects cats as
gyros too.

I should consider increasing my dataset
with random images of stuff that are
not gyros.

--- a/gyros-identifier/gyros-identifier/Info.plist
+++ b/gyros-identifier/gyros-identifier/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Enable camera acess to take pictures of gyros!</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Enable photo library acess to load pictures of gyros!</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
